--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
       rel="stylesheet"
       href="    https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h1>Weather App</h1>
+
+      <form>
+        <input type="text" placeholder="Enter City" id="city-input" />
+        <input type="submit" value="Get Weather" />
+      </form>
+
+      <div id="weather-data">
+        <div class="details">D</div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
