created another function to get weather data from latitude and longitude

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="container">
       <h1>Weather App</h1>
 
-      <form>
+      <form id="send-location">
         <input type="text" placeholder="Enter City" id="city-input" />
         <input type="submit" value="Get Weather" />
       </form>
 
       <div id="weather-data">
-        <div class="details">D</div>
+        <div id="details"></div>
       </div>
     </div>
     <script src="script.js"></script>
